.. _changelog:

================
 Change history
================

.. _version-3.0.8:

3.0.8
=====
:release-date: 2013-12-16 16:00 P.M UTC
:release-by: Ask Solem

- Redis: Would attempt to read from the wrong connection if a select/epoll/kqueue
  exception event happened.

    Fix contributed by Michael Nelson.

- Redis: Disabling ack emulation now works properly.

    Fix contributed by Michael Nelson.

- Redis: :exc:`IOError` and :exc:`OSError` are now treated as recoverable
  connection errors.

- SQS: Improved performance by reading messages in bulk.

    Contributed by Matt Wise.

- Connection Pool: Attempting to acquire from a closed pool will now
  raise :class:`RuntimeError`.

.. _version-3.0.7:

3.0.7
=====
:release-date: 2013-12-02 04:00 P.M UTC
:release-by: Ask Solem

- Fixes Python 2.6 compatibility.

- Redis: Fixes 'bad file descriptor' issue.

.. _version-3.0.6:

3.0.6
=====
:release-date: 2013-11-21 04:50 P.M UTC
:release-by: Ask Solem

- Timer: No longer attempts to hash keyword arguments (Issue #275).

- Async: Did not account for the long type for file descriptors.

    Fix contributed by Fabrice Rabaute.

- PyPy: kqueue support was broken.

- Redis: Bad pub/sub payloads no longer crashes the consumer.

- Redis: Unix socket URLs can now specify a virtual host by including
  it as a query parameter.

    Example URL specifying a virtual host using database number 3::

        redis+socket:///tmp/redis.sock?virtual_host=3

- ``kombu.VERSION`` is now a named tuple.

.. _version-3.0.5:

3.0.5
=====
:release-date: 2013-11-15 11:00 P.M UTC
:release-by: Ask Solem

- Now depends on :mod:`amqp` 1.3.3.

- Redis: Fixed Python 3 compatibility problem (Issue #270).

- MongoDB: Fixed problem with URL parsing when authentication used.

    Fix contributed by dongweiming.

- pyamqp: Fixed small issue when publishing the message and
  the property dictionary was set to None.

    Fix contributed by Victor Garcia.

- Fixed problem in ``repr(LaxBoundedSemaphore)``.
